--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,21 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield !important;
 }
+
+@media (max-width: 1220px) {
+    .left-sidebar {
+        top: 100px !important;
+        max-width: 100% !important;
+    }
+
+    .icon-menu {
+        top: 40px !important;
+    }
+}
+
+@media (max-width: 540px) {
+    .email {
+        font-size: 16px !important;
+    }
+}
+
