email functionality done.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@ input[type=number] {
     font-weight: 600;
 }
 
+#popup.success {
+    color: green;
+    border-bottom: 1px solid green;
+}
+
 @keyframes popup {
 
     10%,
